--- a/.gitignore
+++ b/.gitignore
@@ -328,4 +328,5 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
-/Seminario/SitioSu
+
+/Seminario/SitioSu/contenidos
