--- a/Seminario/Web.config
+++ b/Seminario/Web.config
@@ -47,6 +47,12 @@
   <connectionStrings>
     <add name="seminarioDBContainer" connectionString="metadata=res://*/Aplicativo.seminarioDB.csdl|res://*/Aplicativo.seminarioDB.ssdl|res://*/Aplicativo.seminarioDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=SeminarioDB;user id=sa;password=berton123;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
   </connectionStrings>
+  <appSettings>
+    <add key="Smtp_host" value="smtp.mail.yahoo.com"/>
+    <add key="Smtp_port" value="587"/>
+    <add key="NetworkCredential_address" value="fede.berton@yahoo.com"/>
+    <add key="NetworkCredential_pass" value="berton_yahoo"/>
+  </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
